@@ -166,6 +166,32 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|LeafReaderContext
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MultiReader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|RandomIndexWriter
 import|;
 end_import
@@ -1307,6 +1333,264 @@ name|dir
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testGetQueryCache
+specifier|public
+name|void
+name|testGetQueryCache
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|IndexSearcher
+operator|.
+name|getDefaultQueryCache
+argument_list|()
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|QueryCache
+name|dummyCache
+init|=
+operator|new
+name|QueryCache
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Weight
+name|doCache
+parameter_list|(
+name|Weight
+name|weight
+parameter_list|,
+name|QueryCachingPolicy
+name|policy
+parameter_list|)
+block|{
+return|return
+name|weight
+return|;
+block|}
+block|}
+decl_stmt|;
+name|searcher
+operator|.
+name|setQueryCache
+argument_list|(
+name|dummyCache
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dummyCache
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexSearcher
+operator|.
+name|setDefaultQueryCache
+argument_list|(
+name|dummyCache
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|=
+operator|new
+name|IndexSearcher
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dummyCache
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|.
+name|setQueryCache
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|searcher
+operator|.
+name|getQueryCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexSearcher
+operator|.
+name|setDefaultQueryCache
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|=
+operator|new
+name|IndexSearcher
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|searcher
+operator|.
+name|getQueryCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testGetQueryCachingPolicy
+specifier|public
+name|void
+name|testGetQueryCachingPolicy
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|IndexSearcher
+operator|.
+name|getDefaultQueryCachingPolicy
+argument_list|()
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCachingPolicy
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|QueryCachingPolicy
+name|dummyPolicy
+init|=
+operator|new
+name|QueryCachingPolicy
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|shouldCache
+parameter_list|(
+name|Query
+name|query
+parameter_list|,
+name|LeafReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+literal|false
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|onUse
+parameter_list|(
+name|Query
+name|query
+parameter_list|)
+block|{}
+block|}
+decl_stmt|;
+name|searcher
+operator|.
+name|setQueryCachingPolicy
+argument_list|(
+name|dummyPolicy
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dummyPolicy
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCachingPolicy
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexSearcher
+operator|.
+name|setDefaultQueryCachingPolicy
+argument_list|(
+name|dummyPolicy
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|=
+operator|new
+name|IndexSearcher
+argument_list|(
+operator|new
+name|MultiReader
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dummyPolicy
+argument_list|,
+name|searcher
+operator|.
+name|getQueryCachingPolicy
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
